--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-hook-form": "^7.49.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "vite": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -27,7 +28,6 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "eslint-plugin-react-refresh": "^0.4.5"
   }
 }
