--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "cd backend && npm start",
+    "prebuild": "cd backend && npm install & cd frontend && npm install",
     "build": "cd frontend && npm run build",
-    "postbuild": "mv -f frontend/"
+    "postbuild": "mv -f frontend/dist backend/src/public"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0 <19.0.0"
+  }
 }
